--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="小包包 - 豆包风格的AI对话框组件，基于React + TypeScript构建" />
     <meta name="keywords" content="AI,聊天,对话框,React,TypeScript,豆包,小包包" />
